# Scrubber

./: README.md  pyproject.toml
src/: main.py
tests/: test_scrubber.py
tests/dummy_dir/: dummy_file.py
