[tool.poetry]
name = "scrubber"
version = "0.1.0"
description = "An application to scrub your comments"
authors = ["kmg731 <kyle.goldbeck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
